--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon -e js, ejs",
+    "start:prod" : "node index.js",
     "pretest": "NODE_ENV=test npx sequelize-cli db:drop && NODE_ENV=test npx sequelize-cli db:create",
     "test": "NODE_ENV=test jest --detectOpenHandles",
     "prepare": "cd .. && husky install todo-app/.husky"
@@ -17,6 +19,7 @@
   "author": "vaibhav",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.21.0",
     "pg": "^8.12.0",
     "pre-commit": "^1.2.2",
@@ -29,6 +32,7 @@
     "husky": "^7.0.4",
     "jest": "^29.7.0",
     "lint-staged": "^13.3.0",
+    "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
     "sequelize-cli": "^6.6.2",
     "supertest": "^7.0.0"
