--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon -e js, ejs",
-    "start:prod" : "node index.js",
+    "start:prod": "node index.js",
     "pretest": "NODE_ENV=test npx sequelize-cli db:drop && NODE_ENV=test npx sequelize-cli db:create",
     "test": "NODE_ENV=test jest --detectOpenHandles",
-    "prepare": "cd .. && husky install todo-app/.husky"
+    "prepare": "husky install todo-app/.husky"
   },
   "lint-staged": {
     "*.js": [
@@ -19,14 +19,23 @@
   "author": "vaibhav",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "connect-ensure-login": "^0.1.1",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
+    "express-session": "^1.18.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.12.0",
     "pre-commit": "^1.2.2",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "tiny-csrf": "^1.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.10.0",
+    "cheerio": "^1.0.0",
     "eslint": "^9.10.0",
     "globals": "^15.9.0",
     "husky": "^7.0.4",
